<resources>
    <string name="app_name">Navigation Gestures</string>
    <string name="gestures_on">Gestures On</string>
    <string name="gestures_off">Gestures Off</string>
    <string name="nav_hidden">NavBar Hidden</string>
    <string name="nav_shown">NavBar Shown</string>
    <string name="settings">Settings</string>
    <string name="gestures">Gestures</string>
    <string name="appearance">Appearance</string>
    <string name="behavior">Behavior</string>
    <string name="activated">Enable Gesture Pill</string>
    <string name="toggle">Toggle</string>
    <string name="width">Pill Width</string>
    <string name="height">Pill Height</string>
    <string name="position_y">Vertical (Y) Position</string>
    <string name="position_x">Horizontal (X) Position</string>
    <string name="taps">Taps</string>
    <string name="swipes">Swipes</string>
    <string name="version">Version</string>
    <string name="tutorial_video">Tutorial Video</string>
    <string name="feedback">Feedback</string>
    <string name="xda_thread">XDA Thread</string>
    <string name="other_apps">XDA Apps</string>
    <string name="welcome">Welcome!</string>
    <string name="draw_over_apps">Draw Over Apps</string>
    <string name="grant">Grant</string>
    <string name="accessibility_service">Accessibility Service</string>
    <string name="write_secure_settings">Write Secure Settings</string>
    <string name="ready">All Set</string>
    <string name="root_found">You have root!</string>
    <string name="use_root">Use Root</string>
    <string name="missing_perms">Missing Permissions!</string>
    <string name="premium_required">Premium Action!</string>
    <string name="nougat_required">Requires Nougat</string>
    <string name="oreo_required">Requires Oreo</string>
    <string name="pie_required">Requires Pie</string>
    <string name="hold_time">Swipe and Hold Time</string>
    <string name="vibration_duration">Vibration Duration</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="libraries">Libraries</string>
    <string name="qs_tile">Quick Settings Tile</string>
    <string name="run_command">Run This Command from Your PC</string>
    <string name="got_it">Got It</string>
    <string name="need_help">I Need Help</string>
    <string name="non_root">Non-Root</string>
    <string name="sorry">Sorry :(</string>
    <string name="anim_duration">Animation Duration</string>
    <string name="warning">Warning!</string>
    <string name="pill_color">Pill Color</string>
    <string name="pill_border_color">Pill Border Color</string>
    <string name="show_pill_shadow">Show Pill Shadow</string>
    <string name="static_pill">Don\'t Move Pill when Keyboard Shown</string>
    <string name="hide_navbar_in_landscape">Hide Navigation Bar in Landscape</string>
    <string name="hide_navbar_in_upside_down">Hide NavBar when Upside Down</string>
    <string name="white_bar">White Bar</string>
    <string name="tablet_mode">Hide Navigation Bar on Tablets</string>
    <string name="compatibility">Compatibility</string>
    <string name="foreground">Navigation Gestures is Active</string>
    <string name="pill_corner_radius">Pill Corner Radius</string>
    <string name="hide_in_fullscreen">Hide in Fullscreen Apps</string>
    <string name="larger_hitbox">Larger Hitbox</string>
    <string name="hide_nav">Hide Navigation Bar</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="color_prefs">Colors</string>
    <string name="dimension_prefs">Dimensions</string>
    <string name="position_prefs">Position</string>
    <string name="dimension">Dimension</string>
    <string name="navigation">Navigation</string>
    <string name="system">System</string>
    <string name="media">Media</string>
    <string name="apps">Apps</string>
    <string name="orig_nav_in_immersive">Show Navigation Bar in Fullscreen</string>
    <string name="enable_in_car_mode">Show Pill in Car Mode</string>
    <string name="use_pixels">Use Pixels for %s</string>
    <string name="sectioned_pill">Split Pill</string>
    <string name="toggle_gestures">Toggle Gestures</string>
    <string name="toggle_nav">Toggle NavBar</string>
    <string name="toggle_gestures_prem">Toggle Gestures (Premium)</string>
    <string name="toggle_nav_prem">Toggle NavBar (Premium)</string>
    <string name="grant_write_settings">Write Settings Permission Required!</string>
    <string name="sections">Sections</string>
    <string name="swipe_up_left">Swipe Up from Left</string>
    <string name="swipe_up_hold_left">Swipe Up and Hold from Left</string>
    <string name="swipe_up_center">Swipe Up from Center</string>
    <string name="swipe_up_hold_center">Swipe Up and Hold from Center</string>
    <string name="swipe_up_right">Swipe Up from Right</string>
    <string name="swipe_up_hold_right">Swipe Up and Hold from Right</string>
    <string name="use_recommended_settings">Use Recommended Settings?</string>
    <string name="hide_pill_on_keyboard">Hide Pill when Keyboard Shown</string>
    <string name="use_immersive_mode_when_nav_hidden">Enable Immersive Navigation Mode</string>
    <string name="nav_imm_enabled">Immersive Navigation Enabled</string>
    <string name="nav_imm_disabled">Immersive Navigation Disabled</string>
    <string name="nav_blacklist">Show NavBar in Selected Apps</string>
    <string name="bar_blacklist">Remove Pill in Selected Apps</string>
    <string name="imm_blacklist">Immersive Blacklist</string>
    <string name="x_threshold">Horizontal (X) Swipe Distance</string>
    <string name="y_threshold">Vertical (Y) Up-Swipe Distance</string>
    <string name="y_threshold_down">Vertical (Y) Down-Swipe Distance</string>
    <string name="hide_after_set_time">Hide Pill After Specified Delay</string>
    <string name="blacklisting">Blacklisting</string>
    <string name="look_feel">Look &amp; Feel</string>
    <string name="durations">Durations</string>
    <string name="pill_hiding">Pill Hiding</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="back_to_default">Go back to default settings?</string>
    <string name="experimental_prefs">Experimental Settings</string>
    <string name="fix_for_other_windows">Keep Pill Shown in other Overlay Apps</string>
    <string name="full_overscan">Use Full Overscan</string>
    <string name="dont_keep_overscan_on_lockscreen">Don\'t Hide NavBar on Lock Screen</string>
    <string name="current_overscan">Current Overscan</string>
    <string name="something_else">Something else?</string>
    <string name="common_issues">Common Issues</string>
    <string name="back_up_gestures">Back Up Gestures</string>
    <string name="restore_gestures">Restore Gestures</string>
    <string name="back_up_appearance">Back Up Appearance</string>
    <string name="restore_appearance">Restore Appearance</string>
    <string name="back_up_behavior">Back Up Behavior</string>
    <string name="restore_behavior">Restore Behavior</string>
    <string name="back_up_omni">Back Up All Settings</string>
    <string name="restore_omni">Restore All Settings</string>
    <string name="all_settings">All Settings</string>
    <string name="section_divider_color">Section Divider Color</string>
    <string name="allow_repeat_long">Allow Repeat Long-Swipes</string>
    <string name="left_side_gesture_height">Left Side Gesture Height</string>
    <string name="right_side_gesture_height">Right Side Gesture Height</string>
    <string name="left_side_gesture_position">Left Side Gesture Position</string>
    <string name="right_side_gesture_position">Right Side Gesture Position</string>
    <string name="side_gestures">Side Gestures</string>
    <string name="left_side_gesture_width">Left Side Gesture Width</string>
    <string name="right_side_gesture_width">Right Side Gesture Width</string>
    <string name="pill_gestures">Pill Gestures</string>
    <string name="gestures_desc">Customize gesture actions</string>
    <string name="appearance_desc">Customize appearance of the navigation pill</string>
    <string name="behavior_desc">Customize how the pill behaves</string>
    <string name="tutorial_video_desc">Wondering how to use the app? We\'re here to help.</string>
    <string name="xda_thread_desc">Have a question about the app? Visit the XDA thread and ask away.</string>
    <string name="other_apps_desc">XDA has other apps too. Check them out!</string>
    <string name="buy_premium_desc">Unlock more functionality with the premium add-on.</string>
    <string name="static_pill_desc">Prevent the pill from moving above the keyboard.</string>
    <string name="hide_navbar_in_landscape_desc">Certain devices show the original navigation bar on the side in landscape. Activate this to prevent that behavior.</string>
    <string name="compatibility_pref_desc">Compatibility options</string>
    <string name="tablet_mode_desc">Many tablets force the navigation bar to always be on the bottom of the screen. Turn this on to account for that behavior.</string>
    <string name="hide_in_fullscreen_desc">When enabled, the pill will automatically hide in fullscreen apps (e.g. videos or games).</string>
    <string name="compatibility_warning">DO NOT CHANGE THESE OPTIONS UNLESS YOU NEED THEM! THEY CAN CAUSE PROBLEMS INSTEAD OF FIXING THEM!</string>
    <string name="larger_hitbox_desc">Enable this to make the pill easier to swipe.</string>
    <string name="orig_nav_in_immersive_desc">When enabled, the original navigation bar will be accessible with a swipe in fullscreen apps.</string>
    <string name="use_pixels_desc">Set %s using pixel count rather than percentages.</string>
    <string name="enable_in_car_mode_desc">When enabled, Navigation Gestures will not disable in Car Mode. Don\'t enable this on TouchWiz devices if you have a software navigation bar.</string>
    <string name="auto_hide_pill_desc_enabled">Delay: %sms. Tap to change.</string>
    <string name="fix_for_other_windows_desc">Choose which apps the pill should be forced to stay on top. Useful for apps like Facebook Messenger chat heads, Drupe, etc.</string>
    <string name="experimental_warning">THESE FEATURES ARE INCOMPLETE AND MAY NOT WORK ON YOUR DEVICE!</string>
    <string name="full_overscan_desc">By default, Navigation Gestures leaves 1 pixel of the original navbar visible. Enable this to remove that pixel. WARNING: This will break certain devices!!!</string>
    <string name="nav_not_hiding_desc">My navigation bar doesn\'t hide in certain rotations.</string>
    <string name="force_touch_not_working">My Galaxy device\'s force touch isn\'t working.</string>
    <string name="home_action_not_working">The \"Home\" action isn\'t working.</string>
    <string name="hard_to_hit_pill">It\'s hard to hit the pill.</string>
    <string name="white_line">There\'s a white line at the bottom of my screen.</string>
    <string name="something_else_desc">Check out the Settings for all the customization and troubleshooting options.</string>
    <string name="pill_in_other_overlays">The pill isn\'t working in Facebook Chat Heads, Drupe, etc.</string>
    <string name="pill_overlaps_content">The pill overlaps with my screen content.</string>
    <string name="back_up_gestures_desc">Back up your current gesture settings to a file.</string>
    <string name="restore_gestures_desc">Restore gesture settings from a backup file.</string>
    <string name="section_divider_color_desc">Set the color of dividers to appear between the sections of the split pill.</string>
    <string name="allow_repeat_long_desc">Allow long swipes to be executed multiple times without letting go of the pill.</string>
    <string name="material_intro">Material Intro (Fork)</string>
    <string name="slider_pref">SeekBarPreference</string>
    <string name="color_picker">Color Picker (Fork)</string>
    <string name="edge_sdk">Galaxy Edge SDK</string>
    <string name="anr_watchdog">ANR-WatchDog</string>
</resources>