<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.xda.nobar.prefs.RedTextWarningPref
        android:title="@string/warning"
        android:summary="@string/compatibility_warning" />

    <SwitchPreference
        android:title="@string/hide_navbar_in_landscape"
        android:summary="@string/hide_navbar_in_landscape_desc"
        android:key="rot270_fix" />

    <SwitchPreference
        android:title="@string/tablet_mode"
        android:summary="@string/tablet_mode_desc"
        android:key="tablet_mode" />

    <SwitchPreference
        android:title="@string/larger_hitbox"
        android:summary="@string/larger_hitbox_desc"
        android:key="larger_hitbox"
        android:defaultValue="true" />

    <SwitchPreference
        android:title="@string/orig_nav_in_immersive"
        android:summary="@string/orig_nav_in_immersive_desc"
        android:key="orig_nav_in_immersive"
        android:defaultValue="false" />

    <!--<SwitchPreference-->
        <!--android:title="@string/use_root"-->
        <!--android:summary="@string/use_root_desc"-->
        <!--android:key="use_root" />-->

</PreferenceScreen>