<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/common_issues">

        <Preference
            android:summary="@string/nav_not_hiding_desc"
            android:key="nav_not_hiding"
            />

        <Preference
            android:summary="@string/home_action_not_working"
            android:key="home_not_working"
            />

        <Preference
            android:summary="@string/force_touch_not_working"
            android:key="force_touch_not_working"
            />

        <Preference
            android:summary="@string/pill_in_other_overlays"
            android:key="other_overlays"
            />

        <Preference
            android:summary="@string/hard_to_hit_pill"
            android:key="hard_to_hit_pill"
            />

        <Preference
            android:summary="@string/white_line"
            android:key="white_line"
            />

        <Preference
            android:summary="@string/pill_overlaps_content"
            android:key="pill_overlaps"
            />

    </PreferenceCategory>

    <Preference
        android:title="@string/something_else"
        android:summary="@string/something_else_desc"
        android:key="something_else"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        />


</PreferenceScreen>