<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.xda.nobar.prefs.RedTextWarningPref
        android:title="@string/warning"
        android:summary="@string/experimental_warning" />

    <com.xda.nobar.prefs.SeekBarSwitchPreference
        android:title="@string/hide_pill_on_keyboard"
        android:summaryOn="@string/auto_hide_pill_desc_enabled"
        android:key="hide_pill_on_keyboard"
        android:icon="@drawable/ic_keyboard_hide_black_24dp"
        android:defaultValue="@bool/hide_on_keyboard_default"
        app:view_defaultValue="@integer/default_auto_hide_time"
        app:minValue="@integer/min_auto_hide_time"
        app:maxValue="@integer/max_auto_hide_time"
        app:units="ms"
        />

    <Preference
        android:title="@string/fix_for_other_windows"
        android:summary="@string/fix_for_other_windows_desc"
        android:icon="@drawable/ic_autorenew_black_24dp"
        android:key="window_fix" />

    <SwitchPreference
        android:title="@string/full_overscan"
        android:summary="@string/full_overscan_desc"
        android:icon="@drawable/ic_fullscreen_black_24dp"
        android:key="full_overscan" />

    <!--<SwitchPreference-->
        <!--android:defaultValue="false"-->
        <!--android:key="use_root"-->
        <!--android:title="@string/use_root" />-->

</PreferenceScreen>