<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:title="@string/allow_repeat_long"
        android:summary="@string/allow_repeat_long_desc"
        android:key="allow_repeat_long"
        android:icon="@drawable/ic_repeat_24dp"
        android:defaultValue="@bool/allow_repeat_long_execute_default"
        />

    <com.xda.nobar.prefs.NavControllerPreference
        android:title="@string/pill_gestures"
        android:key="pill_gestures_screen"
        app:preference_action="@id/pillGestureFragment"
        />

    <com.xda.nobar.prefs.NavControllerPreference
        android:title="@string/side_gestures"
        android:key="side_gestures_screen"
        app:preference_action="@id/sideGestureFragment"
        />

</PreferenceScreen>